--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ section {
 #footer {
   background-color: #444;
   color: #aaa;
-  font-size: 8pt;
+  font-size: 0.66em;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
@@ -79,7 +79,7 @@ nav h1 {
 
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
+  font-size: 1.17em;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
@@ -89,7 +89,7 @@ nav h1 a {
   padding: 10px 40px 16px;
   list-style: none;
   background-color: #eee;
-  font-size: 17px;
+  font-size: 1.05em;
   margin: 0;
   width: calc(50% - 80px);
 }
@@ -141,7 +141,7 @@ nav h1 a {
 
 .filter-options h2 {
   color: white;
-  font-size: 1rem;
+  font-size: 1em;
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
@@ -150,7 +150,7 @@ nav h1 a {
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
-  font-size: 11pt;
+  font-size: 0.92em;
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
@@ -175,7 +175,7 @@ nav h1 a {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  max-width: 100%;
 }
 
 #restaurants-list .restaurant-img {
@@ -189,7 +189,7 @@ nav h1 a {
 
 #restaurants-list li h1 {
   color: #f18200;
-  font-size: 14pt;
+  font-size: 1.17em;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
@@ -199,7 +199,7 @@ nav h1 a {
 
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
+  font-size: 0.92em;
 }
 
 #restaurants-list li a {
@@ -207,7 +207,7 @@ nav h1 a {
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
-  font-size: 10pt;
+  font-size: 0.83em;
   margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
@@ -247,7 +247,7 @@ nav h1 a {
 
 #restaurant-name {
   color: #f18200;
-  font-size: 20pt;
+  font-size: 1.67em;
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -260,14 +260,14 @@ nav h1 a {
 }
 
 #restaurant-address {
-  font-size: 12pt;
+  font-size: 1em;
   margin: 10px 0px;
 }
 
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
+  font-size: 1em;
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
@@ -291,7 +291,7 @@ nav h1 a {
 
 #reviews-container h2 {
   color: #f58500;
-  font-size: 24pt;
+  font-size: 2em;
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
