--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   color: #333;
   line-height: 1.5;
   background-color: #fdfdfd;
@@ -67,21 +67,24 @@ section {
 /* ====================== Navigation ====================== */
 
 nav {
+  display: table;
   width: 100%;
-  height: 80px;
+  height: 4em;
   background-color: #252831;
   text-align: center;
 }
 
 nav h1 {
+  display: table-cell;
+  vertical-align: middle;
   margin: auto;
 }
 
 nav h1 a {
   color: #fff;
-  font-size: 1.17em;
-  font-weight: 200;
-  letter-spacing: 10px;
+  font-size: 0.8em;
+  font-weight: 300;
+  letter-spacing: 0.3em;
   text-transform: uppercase;
 }
 
@@ -269,7 +272,7 @@ nav h1 a {
   color: #ddd;
   font-size: 1em;
   font-weight: 300;
-  letter-spacing: 10px;
+  letter-spacing: 0.625em;
   margin: 0 0 20px;
   padding: 2px 0;
   text-align: center;
@@ -293,8 +296,8 @@ nav h1 a {
   color: #f58500;
   font-size: 2em;
   font-weight: 300;
-  letter-spacing: -1px;
-  padding-bottom: 1pt;
+  letter-spacing: -0.063em;
+  padding-bottom: 0.083em;
 }
 
 #reviews-list {
@@ -320,4 +323,24 @@ nav h1 a {
 
 #restaurant-hours td {
   color: #666;
+}
+
+/* Mobile first media queries */
+
+@media (min-width: 30em) {
+  nav {
+    height: 5em;
+  }
+  
+  nav h1 a {
+    font-size: 0.9em;
+    letter-spacing: 0.55em;
+  }
+}
+
+@media (min-width: 42.5em) {
+  nav h1 a {
+    font-size: 1.17em;
+    letter-spacing: 0.625em;
+  }
 }
