--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ a:focus {
 }
 
 a img {
-  border: none 0px #fff;
+  border: none;
 }
 
 h1,
@@ -89,12 +89,12 @@ nav h1 a {
 }
 
 #breadcrumb {
-  padding: 10px 40px 16px;
+  padding: 10px 3% 16px;
   list-style: none;
   background-color: #eee;
   font-size: 1.05em;
   margin: 0;
-  width: calc(50% - 80px);
+  /* width: calc(50% - 80px); */
 }
 
 /* Display list items side by side */
@@ -164,19 +164,23 @@ nav h1 a {
 /* ====================== Restaurant Listing ====================== */
 
 #restaurants-list {
+  display: grid;
+  grid-template-columns: 1fr;
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 0px 60px;
+  padding: 1em 0;
   text-align: center;
 }
 
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
-  margin: 15px;
+  border-top-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  margin: 3%;
   min-height: 380px;
-  padding: 1em 30px 25px;
+  padding: 1em 3%;
   text-align: left;
   max-width: 100%;
 }
@@ -192,7 +196,7 @@ nav h1 a {
 #restaurants-list li h1 {
   color: #f18200;
   font-size: 1.17em;
-  font-weight: 200;
+  font-weight: 400;
   letter-spacing: 0;
   line-height: 1.3;
   margin: 20px 0 10px;
@@ -219,14 +223,14 @@ nav h1 a {
 
 /* ====================== Restaurant Details ====================== */
 
-.inside header {
+/* .inside header {
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
-}
+} */
 
-.inside #map-container {
+/* .inside #map-container {
   background: blue none repeat scroll 0 0;
   height: 87%;
   position: fixed;
@@ -239,13 +243,13 @@ nav h1 a {
   background-color: #ccc;
   height: 100%;
   width: 100%;
-}
+} */
 
-.inside #footer {
+/* .inside #footer {
   bottom: 0;
   position: absolute;
   width: 50%;
-}
+} */
 
 #restaurant-name {
   color: #f18200;
@@ -258,7 +262,7 @@ nav h1 a {
 }
 
 #restaurant-img {
-  width: 90%;
+  width: 100%;
 }
 
 #restaurant-address {
@@ -276,15 +280,15 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-  width: 90%;
+  width: 100%;
 }
 
 #restaurant-container,
 #reviews-container {
   border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  /* border-top: 1px solid #fff; */
+  padding: 70px 3% 30px;
+  /* width: 50%; */
 }
 
 #reviews-container {
@@ -313,7 +317,7 @@ nav h1 a {
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+  width: calc(100% - 40px);
 }
 
 #reviews-list li p {
@@ -331,9 +335,9 @@ nav h1 a {
     width: 200px;
   }
 
-  #restaurants-list { 
+  /* #restaurants-list { 
     padding: 30px 15px 60px;
-  }
+  } */
 }
 
 @media (min-width: 30em) {
@@ -351,5 +355,11 @@ nav h1 a {
   nav h1 a {
     font-size: 1.17em;
     letter-spacing: 0.625em;
+  }
+}
+
+@media (min-width: 56em) {
+  #restaurants-list { 
+    grid-template-columns: 1fr 1fr;
   }
 }
