style: Add class to info text when no restaurants can be find

--- a/css/styles.css
+++ b/css/styles.css
@@ -177,6 +177,11 @@ nav h1 a {
   text-align: center;
 }
 
+.no-restaurants {
+  text-align: center;
+  margin: 3em 3em 1em;
+}
+
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
