--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0 0 20px;
+  margin: 0 0 1.250em;
 }
 
 article,
@@ -59,7 +59,7 @@ section {
 
 #wrapper {
   min-height: 100%;
-  margin-bottom: -4.063em;
+  margin-bottom: -4.063rem;
 }
 
 #maincontent {
@@ -102,12 +102,11 @@ nav h1 a {
 }
 
 #breadcrumb {
-  padding: 10px 3% 16px;
+  padding: 0.625em 3% 1em;
   list-style: none;
   background-color: #eee;
   font-size: 1.05em;
   margin: 0;
-  /* width: calc(50% - 80px); */
 }
 
 /* Display list items side by side */
@@ -119,7 +118,7 @@ nav h1 a {
 /* Add a slash symbol (/) before/behind each list item */
 
 #breadcrumb li+li:before {
-  padding: 8px;
+  padding: 0.5em;
   color: black;
   content: "/\00a0";
 }
@@ -141,7 +140,7 @@ nav h1 a {
 /* ====================== Map ====================== */
 
 #map {
-  height: 400px;
+  height: 25.000em;
   width: 100%;
   background-color: #ccc;
 }
@@ -161,7 +160,7 @@ nav h1 a {
   font-size: 1em;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 0 1.250em;
   padding-top: 0.85em;
 }
 
@@ -169,11 +168,11 @@ nav h1 a {
   background-color: white;
   border: 1px solid #fff;
   font-size: 0.92em;
-  height: 35px;
+  height: 2.188em;
   letter-spacing: 0;
-  margin: 10px;
-  padding: 0 10px;
-  width: calc(100% - 20px);
+  margin: 0.625em;
+  padding: 0 0.625em;
+  width: calc(100% - 1.25em);
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -196,10 +195,9 @@ nav h1 a {
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
-  border-top-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+  border-top-left-radius: 1.250em;
+  border-bottom-right-radius: 1.250em;
   margin: 3%;
-  min-height: 380px;
   padding: 1em 3%;
   text-align: left;
   max-width: 100%;
@@ -210,7 +208,7 @@ nav h1 a {
   display: block;
   margin: 0;
   width: 100%;
-  border-radius: 20px;
+  border-radius: 1.250em;
 }
 
 #restaurants-list li h2 {
@@ -219,7 +217,7 @@ nav h1 a {
   font-weight: 400;
   letter-spacing: 0;
   line-height: 1.3;
-  margin: 20px 0 10px;
+  margin: 1.250em 0 0.625em;
   text-transform: uppercase;
 }
 
@@ -234,8 +232,8 @@ nav h1 a {
   color: #fff;
   display: inline-block;
   font-size: 0.83em;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
+  margin: 0.938em 0 0;
+  padding: 0.500em 1.875em 0.625em;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
@@ -276,7 +274,7 @@ nav h1 a {
   font-size: 1.67em;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 15px 0 30px;
+  margin: 0.938em 0 1.875em;
   text-transform: uppercase;
   line-height: 1.1;
 }
@@ -287,7 +285,7 @@ nav h1 a {
 
 #restaurant-address {
   font-size: 1em;
-  margin: 10px 0px;
+  margin: 0.625em 0px;
 }
 
 #restaurant-cuisine {
@@ -296,8 +294,8 @@ nav h1 a {
   font-size: 1em;
   font-weight: 300;
   letter-spacing: 0.625em;
-  margin: 0 0 20px;
-  padding: 2px 0;
+  margin: 0 0 1.250em;
+  padding: 0.125em 0;
   text-align: center;
   text-transform: uppercase;
   width: 100%;
@@ -307,12 +305,12 @@ nav h1 a {
 #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   /* border-top: 1px solid #fff; */
-  padding: 70px 3% 30px;
+  padding: 4.375em 3% 1.875em;
   /* width: 50%; */
 }
 
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 1.875em 2.500em 5.000em;
 }
 
 #reviews-container h2 {
@@ -333,15 +331,15 @@ nav h1 a {
   border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
+  margin: 0 0 1.875em;
   overflow: hidden;
-  padding: 0 20px 20px;
+  padding: 0 1.250em 1.250em;
   position: relative;
-  width: calc(100% - 40px);
+  width: calc(100% - 2.500em);
 }
 
 #reviews-list li p {
-  margin: 0 0 10px;
+  margin: 0 0 0.625em;
 }
 
 #restaurant-hours td {
@@ -352,7 +350,7 @@ nav h1 a {
 
 @media (min-width: 27.813em) {
   .filter-options select {
-    width: 200px;
+    width: 12.5em;
   }
 
   /* #restaurants-list { 
@@ -385,5 +383,17 @@ nav h1 a {
 @media (min-width: 70em) {
   #restaurants-list { 
     grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (min-width: 200em) {
+  body {
+    font-size: 1.6em;
+  }
+}
+
+@media (min-width: 250em) {
+  body {
+    font-size: 2em;
   }
 }
