--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ nav h1 a {
   background-color: white;
   border: 1px solid #fff;
   font-size: 0.92em;
-  height: 2.188em;
+  height: 2.5em;
   letter-spacing: 0;
   margin: 0.625em;
   padding: 0 0.625em;
@@ -233,7 +233,7 @@ nav h1 a {
   display: inline-block;
   font-size: 0.83em;
   margin: 0.938em 0 0;
-  padding: 0.500em 1.875em 0.625em;
+  padding: 0.700em 1.875em;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
@@ -352,10 +352,6 @@ nav h1 a {
   .filter-options select {
     width: 12.5em;
   }
-
-  /* #restaurants-list { 
-    padding: 30px 15px 60px;
-  } */
 }
 
 @media (min-width: 30em) {
