--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,11 @@ nav h1 a {
   text-transform: uppercase;
 }
 
+#breadcrumb-nav {
+  height: auto;
+  text-align: left;
+}
+
 #breadcrumb {
   padding: 0.625em 3% 1em;
   list-style: none;
@@ -289,16 +294,20 @@ nav h1 a {
 }
 
 #restaurant-cuisine {
-  background-color: #333;
+  background-color: #00549c;
   color: #ddd;
   font-size: 1em;
-  font-weight: 300;
   letter-spacing: 0.625em;
-  margin: 0 0 1.250em;
-  padding: 0.125em 0;
+  margin: 0;
+  padding: 0.7em;
   text-align: center;
   text-transform: uppercase;
   width: 100%;
+}
+
+#restaurant-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 #restaurant-container,
