style: Change margin to grid-gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -185,10 +185,11 @@ nav h1 a {
 #restaurants-list {
   display: grid;
   grid-template-columns: 1fr;
+  grid-gap: 2em;
   background-color: #f3f3f3;
   list-style: outside none none;
-  margin: 0;
-  padding: 1em 0 5em 0;
+  margin: 3em 2% 6em;
+  padding: 0;
   text-align: center;
 }
 
@@ -202,7 +203,6 @@ nav h1 a {
   border: 2px solid #ccc;
   border-top-left-radius: 1.250em;
   border-bottom-right-radius: 1.250em;
-  margin: 3%;
   padding: 1em 3%;
   text-align: left;
   max-width: 100%;
